# gpt-codex-client

./: .gitignore  404.html  AGENTS.md  CHANGELOG.md  LICENSE  README.md  README.zh-CN.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: ci.yml  release.yml
authentication/: index.html
chat-compatibility/: index.html
docs/: authentication.md  chat-compatibility.md  errors.md  index.md  models.md  release.md  responses.md  streaming.md  structured-output.md  tool-calls.md
errors/: index.html
models/: index.html
release/: index.html
responses/: index.html
search/: search_index.json
src/gpt_codex_client/: __init__.py  _async_auth.py  _async_client.py  _async_models.py  _async_responses.py  _async_stream.py  _auth.py  _chat.py  _client.py  _config.py  _converters.py  _errors.py  _models.py  _responses.py  _stream.py  _types.py
streaming/: index.html
structured-output/: index.html
tests/: test_auth.py  test_chat_models_async.py  test_config.py  test_responses.py
tool-calls/: index.html
