[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "gpt-codex-client"
version = "0.1.0"
description = "OpenAI SDK-style Python client for ChatGPT/Codex OAuth-backed Responses workflows."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "gpt-codex-client contributors" }
]
keywords = ["openai", "codex", "chatgpt", "responses", "sdk"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Typing :: Typed",
]
dependencies = [
  "httpx>=0.27,<1",
]

[project.optional-dependencies]
pydantic = ["pydantic>=2"]

[dependency-groups]
dev = [
  "hatchling>=1.26",
  "mike>=2.1",
  "mkdocs-material>=9.5",
  "mkdocstrings-python>=1.10",
  "mypy>=1.11",
  "pydantic>=2",
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "ruff>=0.6",
]

[project.urls]
Homepage = "https://github.com/HC-Zhou/gpt-codex-client"
Documentation = "https://hc-zhou.github.io/gpt-codex-client/"
Issues = "https://github.com/HC-Zhou/gpt-codex-client/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/gpt_codex_client"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "TID", "RUF"]
ignore = ["B008"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
markers = [
  "live: requires real service credentials",
  "interactive: requires a human/browser login",
]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.10"
strict = true
warn_unreachable = true
show_error_codes = true
